--- a/FolderMemo/FolderMemo.csproj
+++ b/FolderMemo/FolderMemo.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>FolderMemo</AssemblyName>
     <RootNamespace>FolderMemo</RootNamespace>
     <Platforms>AnyCPU;x64</Platforms>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
