增加容错判断

--- a/FolderMemo/FolderMemo.csproj
+++ b/FolderMemo/FolderMemo.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>FolderMemo</RootNamespace>
     <Platforms>AnyCPU;x64</Platforms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>FolderHead.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
